--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: Munkhtsatsral (Ella) Batdelger 
-description: Hello! Welcome to my portfolio page.
-show_downloads: true
-theme: jekyll-theme-tactile
+show_downloads: t
+theme: minimal
