--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Munkhtsatsral (Ella) Batdelger 
 show_downloads: true
 url: "https://EllaBatdelger.github.io"
-theme: minimal
+theme: jekyll-theme-tactile
 color_scheme: light
 colors:
   background: "#ffffff"
